--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ body{
 
  /* ABOUT US  */
 
-.stocks h1{
+.stocks h1, .testimonial-data h1{
     color: #6bc449;
     font-size: 40px;
     font-weight: 400;
@@ -101,3 +101,44 @@ body{
  }
 
  /* stocks  */
+
+ .testimonial-data{
+    background-color: #f8f9fa
+ }
+ .client-details{
+    display: inline-block;
+    margin-left: 20px;
+    margin-top:40px;
+ }
+ .client-img img{
+    float: left;
+ }
+ .client-img img:hover{
+    transform: scale(1.3);
+ }
+
+ /* Testimonials  */
+
+ .sign-up{
+    background-image: linear-gradient(#5dc559,#70e22f);
+    height: 200px;
+ }
+ .signup-text h2{
+    color: #fff;
+    text-transform: capitalize;
+    font-size: 40px;
+    font-weight: normal;
+ }
+ .signup-btn{
+    margin-left: 70px;
+ }
+ .sign-up button{
+    border: 0px;
+    border-radius: 15px;
+    padding-right: 20px;
+    padding-left: 20px;
+ }
+ .signup-btn button:hover{
+    font-weight: 400;
+    background-color: teal;
+ }
