--- a/style.css
+++ b/style.css
@@ -10,10 +10,6 @@ body{
 }
 /* NAVBAR  */
 
-
-.banner{
-    background-color: #f8f9fa !important;
-}
 .banner-text{
     font-size: 50px;
     font-weight: 500;
@@ -50,12 +46,11 @@ body{
 
 .icons{
     font-size: 40px;
-    /* text-align: center; */
     color: #6bc449 !important;
     margin: 20px 0px;
 }
 .feature-items{
-    height: 280px;
+    min-height: 280px;
 }
 .feature-head h1{
     color: #6bc449;
@@ -65,17 +60,6 @@ body{
     background-color:teal !important;
     color: #fff;
 }
-@media screen and (max-device-width: 640px) {
-    .feature-items {
-        height: 310px;
-    }
-}
-@media only screen and (min-width: 1000px){
-    .feature-items{
-        height: 350px;
-    }
-}
-
 /* OUR FEATURE  */
 
 .about-us{
@@ -90,7 +74,6 @@ body{
     text-align: justify;
     padding-left: 10px;
 }   
-
  /* ABOUT US  */
 
 .stocks h1, .testimonial-data h1{
@@ -104,7 +87,6 @@ body{
     height: 600px;
     justify-content: center; 
  }
-
  /* stocks  */
 
  .testimonial-data{
@@ -121,12 +103,11 @@ body{
  .client-img img:hover{
     transform: scale(1.3);
  }
-
  /* Testimonials  */
 
  .sign-up{
     background-image: linear-gradient(#5dc559,#70e22f);
-    height: 200px;
+    min-height: 200px;
  }
 .signup-text h2{
     color: #fff;
@@ -153,18 +134,11 @@ body{
         font-size: 25px;
     }
  }
-
- @media only screen and (min-device-width: 768px) and (max-device-width: 1024px){
-    .sign-up{
-        height: 250px;
-     }
- }
  /* SIGN UP  */
 
 .terms{
     text-align: justify;
 }
-
 /* TERMS AND CONDITION  */
 
 .footer{
@@ -182,7 +156,7 @@ body{
     display: flex;
     justify-content: end;
     align-items: center;
-    height: 80px;
+    max-height: 80px;
     padding-right: 10px;
 }
 .fa-circle-chevron-up{
@@ -196,7 +170,6 @@ body{
     color: #fff;
     font-size: 30px;
 }
-
 @media screen and (max-device-width: 640px) {
     .copy-r {
         font-size: 15px;
@@ -205,7 +178,6 @@ body{
         text-transform: capitalize;
     }
     .social-icons {
-        height: 16px;
         padding-right: 24px;
     }
   }
