--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ body{
 
 .stocks h1, .testimonial-data h1{
     color: #6bc449;
-    font-size: 40px;
+    font-size: 35px;
     font-weight: 400;
  }
  .stock-text{
@@ -103,6 +103,7 @@ body{
  .client-img img:hover{
     transform: scale(1.3);
  }
+ 
  /* Testimonials  */
 
  .sign-up{
@@ -143,7 +144,7 @@ body{
 
 .footer{
     background-color: #343a40;
-    height: 80px;
+    min-height: 80px;
     color: #6bc449;
 }
 .copy-r{
