--- a/style.css
+++ b/style.css
@@ -179,7 +179,8 @@ body{
         text-transform: capitalize;
     }
     .social-icons {
-        padding-right: 24px;
+        padding-right: 60px;
+        padding-bottom: 20px;
     }
   }
   @media screen and (min-device-width: 768px)
@@ -197,3 +198,23 @@ body{
     }
 }
  /* footer  */
+
+ .sign-up-form, .login-form{
+    background-image: url(images/banner-new1.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+}
+.container-box{
+    background-color: #fff !important;
+}
+.href-text{
+    text-decoration: none;
+    text-transform: none;
+    color: #5dc559;
+    float: right;
+    padding-right: 10px;
+    padding-top: 10px;
+}
